# dask-lightgbm

./: .dockerignore  .gitignore  .travis.yml  Dockerfile.test  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
dask_lightgbm/: __init__.py  core.py
dask_lightgbm/tests/: test_core.py
system_tests/: test_fit_predict.py
