[tool.poetry]
name = "dask-lightgbm"
version = "0.1.0"
description = "LightGBM distributed training on Dask"
authors = [
    "Jan Stiborek <honza.stiborek@gmail.com>"
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dask/dask-lightgbm"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "dask_lightgbm" },
]
exclude = ["*/tests"]

[tool.poetry.extras]
sparse = ["sparse", "scipy"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17.3"
lightgbm = "^2.3.0"
dask = "^2.6.0"
distributed = "^2.6.0"
toolz = "^0.10.0"
sparse = {version = "==0.5.0", optional = true}
scipy = {version = "^1.3.1", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pylama = "^7.7.1"
pandas = "^0.25.3"
dask = {extras = ["array", "dataframe"], version = "^2.6.0"}
dask-ml = "^1.2.0"
scikit-learn = "^0.22.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
